data/derived/comb/progs/unify/prog4645.ml.out
Characters 110-126:
  let seen' = if List.mem(h,seen) then [h]@seen' in
                 ^^^^^^^^^^^^^^^^
Error: This expression has type ('a * 'b) list -> bool
       but an expression was expected of type bool
